# io_quicksave_cpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt
api/: QuicksaveServer.cc  api.cc
api_stress/: api_stress.py  env.py  run.sh
api_test/: BeanTest.cc  PyEngineTest.cc  QsqlTest.cc
cdn/: ContentHandler.h  cdn.cc
docker/0-dev/0-dev-0-ubuntu/: Dockerfile.in  docker.build.sh
docker/0-dev/0-dev-1-proxygen/: Dockerfile.in  docker.build.sh
docker/0-dev/0-dev-2-antlr/: Dockerfile.in  docker.build.sh
docker/0-dev/0-dev-3-python36/: Dockerfile.in  docker.build.sh
docker/0-dev/0-dev-4-ssh/: Dockerfile.in  docker.build.sh
docker/0-dev/0-dev-5-curl/: Dockerfile.in  docker.build.sh
docker/0-dev/0-dev-9-libs/: Dockerfile.in  docker.build.sh
docker/1-bin/: Dockerfile.in  docker.build.sh
docker/2-test/2-test-0-storage/: Dockerfile.in  docker.bootstrap.sh  docker.build.sh  docker.run.sh  master.db  master.sql  testuser.db  testuser.sql
docker/2-test/2-test-1-api/: Dockerfile.in  docker.build.sh  docker.run.sh
docker/2-test/2-test-2-cdn/: Dockerfile.in  docker.build.sh  docker.run.sh
docker/2-test/2-test-3-oauth/: Dockerfile.in  docker.build.sh  docker.run.sh
docker/2-test/2-test-4-post/: Dockerfile.in  docker.build.sh  docker.run.sh
fuse/: FS.h  StaticReadOnly.h  libfuse.cc
fuse/util/: debug  split  throw
fuse_test/: StaticReadOnlyTest.cc
include/: HttpStatusCodeMapping.h  ProxygenHandler.h  ProxygenHandlerFactory.h  filesystem  hash  reference_cast  string_view  style  timer  timestamp.h  uuid
include/util/: buffer.h  logger.h
main/: Config.h  Environment.h  QuicksaveServer.cc
oauth/: OAuthAPI.h  OAuthHandler.h  OAuthHelper.h  OAuthMasterDatabase.h  OAuthMemcached.h  oauth.cc
oauth_stress/: env.py  oauth_stress.py  run.sh
post/: post.cc
scripts/: generate_beans.sh  generate_beans_db.sh  generate_qsql.sh  make_extern.sh
source/api/: CreateRequest.h  GenericRequest.h  ItemDeleteRequest.h  ItemUpdateRequest.h  MetaDeleteRequest.h  MetaUpdateRequest.h  PerspectiveCreateRequest.h  PerspectiveDeleteRequest.h  PerspectiveUpdateRequest.h  RetrieveRequest.h  TagCreateRequest.h  TagDeleteRequest.h  TagUpdateRequest.h  UploadRequest.h
source/auth/: Authentication.h  User.h
source/database/: Action.h  Connection.h  Database.h  PostgresConnection.h  PostgresProvider.h  PostgresTransaction.h  Provider.h  ProviderFactory.h  SqliteConnection.h  SqliteProvider.h  SqliteTransaction.h  Transaction.h
source/http/: JsonResponse.cc  JsonResponse.h
source/mq/: queue.h
source/privacyGuard/: PrivacyGuardAPI.h
source/provider/: FileSystem.h  Provider.h
source/qs/api-ext/: PluginEngine.h
source/qs/api/handler/: CreateRequest.h  FileDeleteRequest.h  FileRetrieveRequest.h  FileUpdateRequest.h  GenericRequest.h  MetaDeleteRequest.h  MetaUpdateRequest.h  PerspectiveCreateRequest.h  PerspectiveDeleteRequest.h  PerspectiveRetrieveRequest.h  PerspectiveUpdateRequest.h  RetrieveByPerspectiveRequest.h  RetrieveByQueryRequest.h  RetrieveRequest.h  TagCreateRequest.h  TagDeleteRequest.h  TagUpdateRequest.h  UploadRequest.h
source/qs/audit/: Audit.h
source/qs/auth/: Authorization.h
source/qs/database/: Action.h  Connection.h  PostgresConnection.h  PostgresProvider.h  PostgresTransaction.h  Provider.h  ProviderFactory.h  SqliteConnection.h  SqliteProvider.h  SqliteTransaction.h
source/qs/http/: Exception.h
source/qs/mq/: queue.h
source/qs/oauth/: OAuthAPI.h  OAuthHelper.h  OAuthMasterDatabase.h  OAuthMemcached.h
source/qs/server/: ApiServer.h  CdnServer.h  Config.h  Exception.h  Flags.h  HttpStatusCodeMapping.h  OAuthServer.h  ProxygenHandler.h  ProxygenHandlerFactory.h  RequestContext.h
source/qs/storage/: LocalStorage.h  LocalStorageProvider.h  Sshfs.h  SshfsProvider.h  Storage.h  StorageFactory.h  StorageProvider.h
source/qs/useCase/: RetrieveUseCase.h
source/qs/util/: base64.h  buffer.h  format.h  integer.h  timestamp.h  uuid.h
source/server/: ProxygenHandler.h  QuicksaveHandler.h  RequestContext.h
source/storage/: LocalStorage.h  LocalStorageProvider.h  Sshfs.h  SshfsProvider.h  Storage.h  StorageFactory.h  StorageProvider.h
source/useCase/: RetrieveUseCase.h
source/util/: base64.h  buffer.h  format.h  logger.h
test/: QuicksaveHandlerTest.cc
unit_test/: ChainCall.cc  PrivacyGuardAPITest.cc  PyEngineTest.cc  QsqlTest.cc  StringViewTest.cc  UtilTest.cc
unit_test/database/: SqliteConnectionTest.cc  SqliteProviderTest.cc
unit_test/qs/audit/: AuditTest.cc
unit_test/qs/database/: SqliteConnectionTest.cc  SqliteProviderTest.cc
