cmake_minimum_required(VERSION 3.5)
project(quicksave)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS -O0)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/api)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/oauth)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/source)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/generated)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/shared)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/shared/libbeans)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/shared/plugin-engine)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/shared/qsql)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/deps/antlr4/runtime/Cpp/runtime/src)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/deps/rapidjson/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/deps/beans/cppbeans/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/deps/googletest/googletest/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/deps/googletest/googlemock/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/deps/SQLiteCpp/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/deps/rabbitmq-c/librabbitmq)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/deps/rabbitmq-c-utils)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/deps/sha1)

include_directories(/usr/include/python3.5m)

SET(PROJECT_LIBRARIES proxygenhttpserver folly glog gflags)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/deps/googletest)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/deps/antlr4/runtime/Cpp)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/deps/SQLiteCpp)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/deps/rabbitmq-c)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/deps/rabbitmq-c-utils)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/deps/sha1)

MACRO(COLLECT_CC current_path)
    MESSAGE("-- CollectCC -- Searching for cc-files in ${current_path}")
    FILE(GLOB children RELATIVE ${current_path} ${current_path}/*)
    FOREACH (child ${children})
        IF (IS_DIRECTORY ${current_path}/${child})
            IF ("${child}" STREQUAL ".cmake")
                MESSAGE("-- CollectCC -- Skipping .cmake directory")
            ELSEIF ("${child}" STREQUAL ".git")
                MESSAGE("-- CollectCC -- Skipping .git directory")
            ELSEIF ("${child}" STREQUAL ".idea")
                MESSAGE("-- CollectCC -- Skipping .idea directory")
            ELSEIF ("${child}" STREQUAL "build")
                MESSAGE("-- CollectCC -- Skipping build directory")
            ELSE ()
                COLLECT_CC(${current_path}/${child})
            ENDIF ()
        ELSE ()
            GET_FILENAME_COMPONENT(file_ext ${current_path}/${child} EXT)
            GET_FILENAME_COMPONENT(file_name ${current_path}/${child} NAME_WE)
            IF ("${file_ext}" STREQUAL ".cc")
                ADD_LIBRARY(${file_name} ${current_path}/${child})
                SET(PROJECT_LIBRARIES ${PROJECT_LIBRARIES} ${file_name})
                MESSAGE("-- CollectCC -- Adding executable ${file_name} - done")
            ENDIF ()
        ENDIF ()
    ENDFOREACH ()
    MESSAGE("-- CollectCC -- Searching for cc-files in ${current_path} - done")
ENDMACRO()

COLLECT_CC(${CMAKE_CURRENT_SOURCE_DIR}/source)

FILE(GLOB_RECURSE PROJECT_QSQL ${CMAKE_CURRENT_SOURCE_DIR}/generated/qsql/**.cpp)
ADD_LIBRARY(qsql ${PROJECT_QSQL})
TARGET_LINK_LIBRARIES(qsql antlr4_static)

FILE(GLOB_RECURSE PROJECT_TESTS ${CMAKE_CURRENT_SOURCE_DIR}/api_test/**.cc)
ADD_EXECUTABLE(api_test ${PROJECT_TESTS})
TARGET_LINK_LIBRARIES(api_test ${PROJECT_LIBRARIES} python3.5m sha1 antlr4_static qsql gtest gmock pthread SQLiteCpp sqlite3 dl)

FILE(GLOB_RECURSE PROJECT_MAIN ${CMAKE_CURRENT_SOURCE_DIR}/api/**.cc)
ADD_EXECUTABLE(api ${PROJECT_MAIN})
TARGET_LINK_LIBRARIES(api ${PROJECT_LIBRARIES} dl python3.5m memcached rabbitmq-c-utils rabbitmq-static ssl SQLiteCpp sqlite3 antlr4_static qsql pthread sha1)

ADD_EXECUTABLE(post post/post.cc)
TARGET_LINK_LIBRARIES(post pthread glog gflags rabbitmq-static rabbitmq-c-utils sha1)

ADD_EXECUTABLE(oauth oauth/oauth.cc)
TARGET_LINK_LIBRARIES(oauth ${PROJECT_LIBRARIES} dl memcached pthread SQLiteCpp sqlite3)
#ADD_EXECUTABLE(mq mq.cpp)
#TARGET_LINK_LIBRARIES(mq rabbitmq-util rabbitmq-static pthread)
